--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,12 +30,18 @@
 		<!-- <init-param> <param-name>flushMode</param-name> <param-value>AUTO</param-value> 
 			</init-param> -->
 	</filter>
-
 	<filter-mapping>
 		<filter-name>OpenSessionInViewFilter</filter-name>
 		<url-pattern>*.action</url-pattern>
 	</filter-mapping>
-
+	<filter>
+		<filter-name>LoginFilter</filter-name>
+		<filter-class>LoginFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
